--- a/MiniProject/src/main/webapp/resources/js/assets/css/style.css
+++ b/MiniProject/src/main/webapp/resources/js/assets/css/style.css
@@ -576,6 +576,7 @@ textarea::-ms-input-placeholder
 	margin-top:30px;
 	text-align: left;
 	
+	
 }
 .contact-details .contact-category h3{
 	font-size:25px;
@@ -662,8 +663,12 @@ textarea::-ms-input-placeholder
 	
 }
 
-.mar{
+.pageArea {
 	
+	
+	display:inline;
+	margin:0px;
+	text-align: center;
 	
 	
 }
