--- a/MiniProject/src/main/webapp/resources/js/assets/css/style.css
+++ b/MiniProject/src/main/webapp/resources/js/assets/css/style.css
@@ -10,15 +10,14 @@ Author URI: http://themeforest.net/user/XpeedStudio/portfolio
 html,
 body {
     background-color: #ffffff;
-    /* font-size: 22px; */
+    font-size: 20px;
     color: #202020;
-    width: 99%;
-    padding: 8px;
+    width: 100%;
+    padding: 0;
     margin-left: 0;
-    margin-right: -6px;
+    margin-right: 0;
     font-family: 'open_sanslight';
     font-weight: 300;
-    
 }
 /*==========================================
 PRE LOADER 
@@ -97,6 +96,11 @@ ul {
     list-style: none;
     padding: 0;
 }
+li{
+	display: inline;
+	margin: 1em;
+	margin-top: 10em;
+}
 img {
     max-width: 100%;
 }
@@ -127,7 +131,82 @@ input[type="color"],
     border-color: #f56363;
 }
 
+h1,
+h2,
+h3 {
+    /*font-family: 'Lane', sans-serif;*/
+    font-weight: 300;
+    margin: 0;
+}
+h4,
+h5 {
+    /*font-family: 'roboto', sans-serif;*/
+    font-weight: 300;
+    margin: 0;
+    line-height: 2rem;
+}
+h1 {
+    font-size: 3rem;
+    line-height: 4rem;
+    font-weight: 300;
+}
+h2 {
+    font-size: 2.5rem;
+    line-height: 3rem;
+    margin-bottom: .9rem;
+}
+h3 {
+    font-weight: 300;
+    margin-bottom: .9rem;
+    font-size: 2.1rem;
+    line-height: 2.5rem;
+}
+h4 {
+    font-size: 1.6rem;
+    line-height: 2.2rem;
+    margin-bottom: 1.1rem;
+}
+h5 {
+    font-size: 1.3rem;
+    margin-bottom: 1rem;
+}
+h6 {
+    font-size: 1rem;
+    margin-bottom: .9rem;
+}
+p {
+    line-height: 1.5rem;
+    font-size: 1.1rem;
+}
+p:last-child {
+    margin-bottom: 0px;
+}
+/*.home-wrap h1,*/
+.home-wrap h2,
+.home-wrap h3,
+.home-wrap h4,
+.home-wrap h5,
+.home-wrap p {
+    color: #ffffff;
+    /*font-family: 'roboto', sans-serif;*/
+}
+.text {
+    color: #333333;
+}
+.colorstext {
+    color: #f56363;
+}
+.coloricon i {
+    color: #f56363;
+}
+.colorsbg {
+    background: #f56363;
+    color: #ffffff;
+}
 
+.lightbg {
+    background-color: #f9f9f9;
+}
 .transition {
     -webkit-transition: all 300ms linear;
     -moz-transition: all 300ms linear;
@@ -147,9 +226,516 @@ Section
 .sections.footer {
     padding-bottom: 80px;
 }
+section .subtitle h5 {
+    margin-top: 10px;
+    font-size: 1.3rem;
+    font-family: 'roboto', sans-serif;
+}
+.parallax-section {
+    max-width: 100%;
+    color: #ffffff;
+}
+section .title-half h2 {
+    font-size: 3rem;
+    line-height: 4rem;
+    font-weight: 300;
+    margin-bottom: 1.4rem;
+}
+section .subtitle-half h5 {
+    font-weight: 100;
+    font-size: 17px;
+}
+
+.overlay {
+    background-color: rgba(0, 0, 0, .55);
+    width: 100%;
+    min-height:500px;
+}
+.overlay-fluid-block {
+    background-color: rgba(0, 0, 0, 0.5);
+    width: 100%;
+}
+.home-overlay-fluid {
+    background-color: rgba(41, 41, 41, 0.68);
+    width: 80%;
+    margin: auto;
+}
+.overlay-img {
+    background: rgba(0, 0, 0, 0.3);
+    width: 100%;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    color: #ffffff;
+}
+.no-padding {
+    padding: 0 !important;
+}
+.fluid-blocks-col {
+    padding: 70px 40px 0 80px;
+}
+.fluid-blocks-col-right {
+    padding: 70px 80px 0 40px;
+}
+/*
+Separator
+*/
+.separator {
+    height: 1px;
+    width: 150px;
+    margin: auto;
+    background: #f56363;
+}
+
+/*
+Button
+*/
+.btn-primary.active.focus,
+.btn-primary.active:focus,
+.btn-primary.active:hover,
+.btn-primary:active.focus,
+.btn-primary:active:focus,
+.btn-primary:active:hover,
+.open > .dropdown-toggle.btn-primary.focus,
+.open > .dropdown-toggle.btn-primary:focus,
+.open > .dropdown-toggle.btn-primary:hover,
+.btn-primary.focus,
+.btn-primary:focus,
+.btn-primary.disabled,
+.btn-primary.disabled:hover {
+    color: #ffffff;
+    background-color: #f56363;
+    border-color: #f56363;
+}
+
+.btn-default:active, .btn-default:hover  {
+    background: transparent;
+}
 
 
-</style>
+/*
+Extra height css
+*/
+.margin-top-20 {
+    margin-top: 20px;
+}
+.margin-bottom-20 {
+    margin-bottom: 20px;
+}
+.margin-top-40 {
+    margin-top: 40px;
+}
+.margin-bottom-40 {
+    margin-bottom: 40px;
+}
+.margin-top-60 {
+    margin-top: 60px;
+}
+.margin-80 {
+    margin-top: 80px;
+    margin-bottom: 80px;
+}
+.margin-bottom-60 {
+    margin-bottom: 60px;
+}
+.margin-top-80 {
+    margin-top: 80px;
+}
+.margin-bottom-80 {
+    margin-bottom: 80px;
+}
+.padding-top-20 {
+    padding-top: 1.33rem;
+}
+.padding-bottom-20 {
+    padding-bottom: 1.33rem;
+}
+.padding-top-40 {
+    padding-top: 2.66rem;
+}
+.padding-bottom-40 {
+    padding-bottom: 2.66rem;
+}
+.padding-top-60 {
+    padding-top: 5rem;
+}
+.padding-bottom-60 {
+    padding-bottom: 5rem;
+}
+.padding-bottom-0 {
+    padding-bottom: 0;
+}
+/*padding*/
+.padding-twenty {
+    padding: 10px 0;
+}
+.padding-fourty {
+    padding: 20px 0;
+}
+.padding-sixty {
+    padding: 30px 0;
+}
+.padding-eighty {
+    padding: 40px 0;
+}
+h1 span {
+    color: #f56363;
+    font-weight: 400;
+}
 
+/*for placeholder changes*/
+
+/*input::-webkit-input-placeholder {
+  color: #CACACA;
+  font-size: 18px;
+}
+input::-moz-placeholder {
+  color: #CACACA;
+  font-size: 18px;
+}
+input:-ms-input-placeholder {
+  color: #CACACA;
+  font-size: 18px;
+}
+textarea::-webkit-input-placeholder
+{
+  color: #CACACA;
+  font-size: 18px;
+  text-align:center;
+}
+textarea::-moz-input-placeholder
+{
+  color: #CACACA;
+  font-size: 18px;
+  text-align:center;
+}
+textarea::-ms-input-placeholder
+{
+  color: #CACACA;
+  font-size: 18px;
+  text-align:center;
+}
+
+*/
+
+
+/* For Our Global CSSS */
+
+.scroll-down{
+	margin-top:100px;
+	text-transform:uppercase;
+	text-align:center;
+}
+.scroll-down h5{
+	font-size:18px;
+	font-family: 'nexa_boldregular';
+	color:#f1f1f1;
+	letter-spacing:2px;
+}
+.scroll-down a{
+	font-size:50px;
+	color:#f1f1f1;
+	transition:.3s ease-in-out;
+	-webkit-transition:.3s ease-in-out;
+	-moz-transition:.3s ease-in-out;
+}
+.scroll-down a:hover{
+	color:red;
+}
+
+.heading {
+    margin-bottom: 4rem;
+}
+.heading h3{
+    font-size:45px;
+	text-transform:uppercase;
+	letter-spacing:2px;
+}
+.heading p{
+    line-height:40px;
+}
+
+/* For Menu Section */
+
+.navbar-default {
+    background-color: transparent;
+    border-color: #e7e7e7;
+	margin:0 auto;
+}
+.navbar-default .navbar-nav>li>a {
+    color: #f1f1f1;
+    text-transform: uppercase;
+	padding-top:45px;
+	padding-bottom:45px;
+	font-size:20px;
+	font-family:'nexa_lightregular';
+	letter-spacing:2px;
+	line-height:0;
+}
+.navbar-default .navbar-nav>.active>a {
+    color: #f1f1f1;
+    background-color: transparent;
+}
+.navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus{
+    color: red;
+    background-color: transparent;
+}
+.navbar-default .navbar-nav>li>a:hover, .navbar-default .navbar-nav>li>a:focus {
+    color: red;
+    background-color: transparent;
+}
+  .navbar-nav {
+    text-align: center;
+}
+.navbar-toggle {
+    background-color:#fff;
+    border:0;
+    border-radius:0;
+}
+.navbar-default .navbar-toggle .icon-bar {
+    background-color: #000;
+}
+
+.menu-bg{
+	background:#474747;
+}
+
+/* For Home Section */
+
+.home{
+  background: url(../images/header-bg.jpg) no-repeat center top fixed;
+  background-size: cover;
+  -moz-background-size: cover;
+  -webkit-background-size: cover;
+  -o-background-size: cover;
+  width: 100%;
+  overflow: hidden;
+}
+.home-details{
+	margin-top:150px;
+	color:#f1f1f1;
+	text-transform:uppercase;
+}
+.home-details .logo{
+	margin-bottom:50px;
+}
+
+.home-details .home-title h1{
+	font-size:60px;
+	font-family: 'nexa_lightregular';
+	letter-spacing:1px;
+}
+.home-details .home-title h1 span{
+	font-family: 'nexa_boldregular';
+	color:#f1f1f1;
+}
+
+/* For About Section */
+
+.about-content{
+	margin-top:40px;
+}
+.about-content .signature{
+	margin-top:50px;
+}
+
+/* For Portfolio Section */
+
+.portfolio{
+	background: url(../images/portfolio-bg.jpg) no-repeat center top fixed;
+	background-size: cover;
+	-moz-background-size: cover;
+	-webkit-background-size: cover;
+	-o-background-size: cover;
+	width: 100%;
+	overflow: hidden;
+}
+.portfolio .title h3{
+	color:#f1f1f1;
+}
+.portfolio-wrapper{
+	width:100%;
+	margin-left:-20px;
+	text-align:center;
+}
+.portfolio-item {
+	display:inline-block;
+	overflow:hidden;
+	width:17%;
+	margin-left:20px;
+	margin-bottom:20px;
+	
+}
+.portfolio-details{
+	width:100%;
+}
+.portfolio-details img{
+	width:100%;
+}
+
+/* For Contact Section */
+
+.contact-details{
+	text-transform:uppercase;
+}
+.contact-details .contact-category{
+	margin-top:30px;
+}
+.contact-details .contact-category h4{
+	font-size:25px;
+	font-family:'nexa_boldregular';
+}
+.contact-details .contact-category .mail h2{
+	font-size:50px;
+	font-family:'nexa_lightregular';
+}
+.contact-details .contact-category .phone h5{
+	font-size:40px;
+	font-family:'nexa_lightregular';
+}
+.contact-details .contact-category .social a {
+    font-size: 26px;
+    color: #202020;
+    border: 2px solid #202020;
+    border-radius: 100%;
+    height: 45px;
+    width: 45px;
+	margin: 10px;
+    line-height: 45px;
+    text-align: center;
+    display: inline-block;
+	transition:.3s ease-in-out;
+	-webkit-transition:.3s ease-in-out;
+	-moz-transition:.3s ease-in-out;
+}
+.contact-details .contact-category .social a :hover{
+    color:red;
+}
+
+/* For Footer Section */
+
+.copyright{
+	border-top:1px solid #bebebe;
+	padding:30px 0;
+}
+.copyright p{
+	color:#bebebe;
+	font-size:16px;
+	text-transform:uppercase;
+	font-family:'nexa_lightregular';
+}
+
+
+h7{
+	font-size: 20px;
+	
+}
+
+.input-group .form-control {
+    position: relative;
+    z-index: 2;
+    float: left;
+    width: 100%;
+    margin-bottom: 15px;
+    margin-top:15px;
+}
+#writeBtn{
+	
+	margin-left: 5em;
+	
+}
+.dropdown-menu{
+	
+	text-align: center;
+}
+
+.pageArea li:hover {
+    
+    
+    cursor:pointer ;
+    
+}
+
+.attachList{
+	
+	max-height: 100em;
+	max-width: 100em;
+	border-color: black;
+	border-radius: 3px;
+	
+}
+
+
+
+/* ==========table============================================================================= */
+
+
+table {
+  
+  
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  table-layout: fixed;
+}
+table caption {
+  font-size: 1.5em;
+  margin: .5em 0 .75em;
+}
+table tr {
+  
+  
+  padding: .35em;
+}
+table th,
+table td {
+  padding: .625em;
+  text-align: center;
+}
+table th {
+  font-size: .85em;
+  letter-spacing: .1em;
+  text-transform: uppercase;
+}
+@media screen and (max-width: 600px) {
+  table {
+    border: 0;
+  }
+  table caption {
+    font-size: 1.3em;
+  }
+  table thead {
+    border: none;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+  }
+  table tr {
+    border-bottom: 3px solid #ddd;
+    display: block;
+    margin-bottom: .625em;
+  }
+  table td {
+    border-bottom: 1px solid #ddd;
+    display: block;
+    font-size: .8em;
+    text-align: center;
+  }
+  table td:before {
+    
+    content: attr(data-label);
+    float: left;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+  table td:last-child {
+    border-bottom: 0;
+  }
+  table th {
+    text-align: center;
+}
 
 
