10/27 comple Signed-off-by: HoSeon <a01073591105@gmail.com>

--- a/MiniProject/src/main/webapp/resources/js/assets/css/style.css
+++ b/MiniProject/src/main/webapp/resources/js/assets/css/style.css
@@ -664,6 +664,17 @@ h7{
 	
 }
 
+.tablehover:hover{
+	
+	color: gray;
+	
+	
+}
+.btn {
+	
+	cursor: default;
+	}
+
 
 
 /* ==========table============================================================================= */
