CommonUtill comple.. Signed-off-by: HoSeon <a01073591105@gmail.com>

--- a/MiniProject/src/main/webapp/resources/css/modern-business.css
+++ b/MiniProject/src/main/webapp/resources/css/modern-business.css
@@ -90,6 +90,14 @@ s.read1{
 	
 	list-style: none;
 }
+h3{
+
+	width:10px;
+	text-overflow:ellipsis !important; 
+	overflow:hidden !important;
+
+	
+}
 
 
 
